# snowrobot

./: .gitignore  CMakeLists.txt  README.md  TODO.txt  build.sh
gstreamer-scripts/: README.txt  client-H264-PCMA.bat  server-H264.bat  server-H264.sh
remotecontrol/: README.txt
remotecontrol/robotsimulator_webapp/: package-lock.json  package.json
remotecontrol/robotsimulator_webapp/public/: index.html
remotecontrol/robotsimulator_webapp/src/: App.js
remotecontrol/server/: Dockerfile  TODO.txt  build_and_push_docker.sh  build_webapp.sh  docker-compose.yml  open_tunnels_to_the_phones.sh  run_server.py  run_webapp.sh  ssh_tunnel_to_robots_knutj_org.sh
remotecontrol/server/controlcenter/: requirements.txt  setup.py
remotecontrol/server/controlcenter/controlcenter/: __init__.py
remotecontrol/server/controlcenter/controlcenter/static/css/: main.css  main.ef96d653.css  main.ef96d653.css.map
remotecontrol/server/controlcenter/controlcenter/static/js/: main.bf7c294b.js  main.bf7c294b.js.map  main.js
remotecontrol/server/controlcenter/controlcenter/templates/: index.html
remotecontrol/server/controlcenter/controlcenter/views/: __init__.py  authentication.py  index.py  webrtc.py
remotecontrol/server/nginx/conf/: gamerpc.crt  gamerpc.key  localhost.crt  localhost.key  nginx.conf
remotecontrol/server/webapp/: package.json
remotecontrol/server/webapp/public/: index.html
remotecontrol/server/webapp/src/: App.css  App.js  Cockpit.css  Cockpit.js  Configuration.js  Dashboard.css  Dashboard.js  MovementControl.css  MovementControl.js  RobotDisplay.css  RobotDisplay.js
remotecontrol/webapp/: package-lock.json  package.json
remotecontrol/webapp/src/: App.css  App.js  Cockpit.css  Cockpit.js  Configuration.js
remotecontrol2/: README.md
remotecontrol2/client/: CMakeLists.txt  README.md  build.bat  client.cpp
remotecontrol2/clienttest/: CMakeLists.txt  clienttest.cpp
remotecontrol2/common/: CMakeLists.txt  README.md  gst_wrappers.h  linebasedserver.cpp  linebasedserver.h  network.cpp  network.h
remotecontrol2/server/: CMakeLists.txt  README.md  build.sh  install_boost.sh  install_gcc.sh  server.cpp
remotecontrol2/tests/: CMakeLists.txt  README.md  run_tests.py  test_smoketest.py  utils.py
romeo_ble_quad/: romeo_ble_quad.ino
